Added usage details for running on localhost port 8080.